--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
+    "@types/match-sorter": "^6.0.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/sort-by": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.1",
